--- a/IA1-T48B.fsproj
+++ b/IA1-T48B.fsproj
@@ -11,6 +11,7 @@
     <Compile Include="Pila.fs" />
     <Compile Include="Busqueda.fs" />
     <Compile Include="OchoCasillas.fs" />
+    <Compile Include="VacuumWorld.fs" />
     <Compile Include="CostoUniforme.fs" />
     <Compile Include="DFSL.fs" />
     <Compile Include="IDFSL.fs" />
