feat(app): add Wolf-Goat-Cabbage

--- a/IA1-T48B.fsproj
+++ b/IA1-T48B.fsproj
@@ -12,6 +12,7 @@
     <Compile Include="Busqueda.fs" />
     <Compile Include="OchoCasillas.fs" />
     <Compile Include="VacuumWorld.fs" />
+    <Compile Include="WolfGoatCabbage.fs" />
     <Compile Include="CostoUniforme.fs" />
     <Compile Include="DFSL.fs" />
     <Compile Include="IDFSL.fs" />
